--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_modular: ^6.3.4
   get:
   dio:
+  pretty_dio_logger: ^1.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
