--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   get:
   dio:
   pretty_dio_logger: ^1.4.0
+  cached_network_image: ^3.4.1
+  path_provider: ^2.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
